@@ -39,6 +39,9 @@ TODO: DEC PM 4h/4l should toggle jumpscroll on or off (PrivMode_smoothScroll)
         - update to CVS version of libev, for a whopping 11kb size decrease.
         - do not ship yet another copy of ecb.h, use the one in libev or
           libptytty instead.
+        - allocate all screen memory in one go and let the virtual memory
+          subsystem sort it out. this simplifies code, improves access
+          locality, saves a bit of ram and makes thigs a bit faster, too.
 
 9.15 Sat Jan 21 13:36:56 CET 2012
 	- remove "using namespace std" because clang erroneously
